--- a/app/views/food_templates/index.html.erb
+++ b/app/views/food_templates/index.html.erb
@@ -1,5 +1,53 @@
 
+<div class="container">
+    <div class="row mb-3">
+      <div class="col-md-12 text-center">
+        <h1 class="font-weight-bold display-4">
+          What The Food
+        </h1>
+      </div>
+    </div>
+    
+    <div class="row">
+        <div class="">
+            <h4>Can't decide where to eat?</h4>
+            <p>Use this website to help you decide! If you have some options but can't pick one, click on Input Choices to help you decide. If you really can't think of anything or want to leave it up to chance, click on Random Pick. Input your location, max distance, and price range, and let Random Pick choose for you.</p>
+        </div>
+        <p></p>
+    </div>
+    
+    <p></p>
+    
+     <div class="row mb-1">
+      <div class="col-md-6">
+        <a href="/input_choices">
+            <div class="card border-info mb-3 text-center">
+              <div class="card-body text-info">
+                <h2 class="card-title">Input Choices</h2>
+                <p></p>
+                <p class="card-text">
+                  <i class="fas fa-spinner fa-10x"></i>
+                </p>
+              </div>
+            </div>
+        </a>
+      </div>
 
-<a href="/input_choices" class="btn btn-block btn-outline-info">Input Choices</button>
+      <div class="col-md-6">
+        <a href="/random">
+            <div class="card border-success mb-3 text-center">
+              <div class="card-body text-success">
+                <h2 class="card-title">Random Pick</h2>
+                <p></p>
+                <p class="card-text">
+                  <i class="fas fa-map-marker-alt fa-10x"></i>
+                </p>
+              </div>
+            </div>
+        </a>
+      </div>
+    </div>
 
-<a href="/random" class="btn btn-block btn-outline-info">Random Pick</button>
+</div>
+
+
