--- a/app/views/food_templates/input_form.html.erb
+++ b/app/views/food_templates/input_form.html.erb
@@ -1,90 +1,90 @@
-<h1>Input Restaurants</h1>
 
-<p>Input up to 10 places to pick from</p>
+<div class="row">
+  <div class="offset-md-1">
+    <h1>Input Restaurants</h1>
+    <p>Input up to 10 places to pick from</p>
+  </div>
+</div>
 
-<form action="/lunch_pick">
-    <div>
-        <label for="choice_1">
-            Choice #1
-        </label>
+<div class="card border-info mb-3 offset-sm-1 col-md-10">
+    <div class="card-body">
+        <form action="/lunch_pick">
+            <div class= "form-group row">
+                <label for="choice_1" class="col-sm-1 col-form-label">Choice #1</label>
+                
+                <div class="col-sm-4">
+                    <input id="choice_1" class="form-control" type="text" name="choice_1">
+                </div>
+                
+                <label for="choice_2" class="col-sm-1 col-form-label offset-md-1">Choice #2</label>
+                
+                <div class="col-sm-4">
+                    <input id="choice_2" class="form-control" type="text" name="choice_2">
+                </div>
+            </div>
+            
+            <div class= "form-group row">
+                <label for="choice_3" class="col-sm-1 col-form-label">Choice #3</label>
+                
+                <div class="col-sm-4">
+                    <input id="choice_3" class="form-control" type="text" name="choice_3">
+                </div>
+                
+                <label for="choice_4" class="col-sm-1 col-form-label offset-md-1">Choice #4</label>
+                
+                <div class="col-sm-4">        
+                    <input id="choice_4" class="form-control" type="text" name="choice_4">
+                </div>
+            </div>
+            
+            <div class= "form-group row">
+                <label for="choice_5" class="col-sm-1 col-form-label">Choice #5</label>
         
-        <input id="choice_1" type="text" name="choice_1">
-    </div>
-    
-    <div>
-        <label for="choice_2">
-            Choice #2
-        </label>
+                <div class="col-sm-4">        
+                    <input id="choice_5" class="form-control" type="text" name="choice_5">
+                </div>   
+                
+                <label for="choice_6" class="col-sm-1 col-form-label offset-md-1">Choice #6</label>
         
-        <input id="choice_2" type="text" name="choice_2">
-    </div>
-    
-    <div>
-        <label for="choice_3">
-            Choice #3
-        </label>
+                <div class="col-sm-4">        
+                    <input id="choice_6" class="form-control" type="text" name="choice_6">
+                </div> 
+            </div>
+            
+            <div class= "form-group row">
+                <label for="choice_7" class="col-sm-1 col-form-label">Choice #7</label>
         
-        <input id="choice_3" type="text" name="choice_3">
-    </div>
-    
-    <div>
-        <label for="choice_4">
-            Choice #4
-        </label>
+                <div class="col-sm-4">        
+                    <input id="choice_7" class="form-control" type="text" name="choice_7">
+                </div>
+                
+                <label for="choice_8" class="col-sm-1 col-form-label offset-md-1">Choice #8</label>
         
-        <input id="choice_4" type="text" name="choice_4">
-    </div>
-    
-    <div>
-        <label for="choice_5">
-            Choice #5
-        </label>
+                <div class="col-sm-4">        
+                    <input id="choice_8" class="form-control" type="text" name="choice_8">
+                </div>
+            </div>
+            
+            <div class= "form-group row">
+                <label for="choice_9" class="col-sm-1 col-form-label">Choice #9</label>
+                
+                <div class="col-sm-4">
+                    <input id="choice_9" class="form-control" type="text" name="choice_9">
+                </div>    
+                
+                <label for="choice_10" class="col-sm-1 col-form-label offset-md-1">Choice #10</label>
+                
+                <div class="col-sm-4">        
+                    <input id="choice_10" class="form-control" type="text" name="choice_10">
+                </div>
+            </div>
         
-        <input id="choice_5" type="text" name="choice_5">
+            <div class="form-group row">
+                <button class="btn btn-block btn-info ">
+                    <i class="fas fa-utensils"></i>
+                    Pick a Place!
+                </button>            
+            </div>
+        </form>
     </div>
-    
-    <div>
-        <label for="choice_6">
-            Choice #6
-        </label>
-        
-        <input id="choice_6" type="text" name="choice_6">
-    </div>
-    
-    <div>
-        <label for="choice_7">
-            Choice #7
-        </label>
-        
-        <input id="choice_7" type="text" name="choice_7">
-    </div>
-    
-    <div>
-        <label for="choice_8">
-            Choice #8
-        </label>
-        
-        <input id="choice_8" type="text" name="choice_8">
-    </div>
-    
-    <div>
-        <label for="choice_9">
-            Choice #9
-        </label>
-        
-        <input id="choice_9" type="text" name="choice_9">
-    </div>
-    
-    <div>
-        <label for="choice_10">
-            Choice #10
-        </label>
-        
-        <input id="choice_10" type="text" name="choice_10">
-    </div>
-    
-    <button>Pick a Place!</button>
-    
-</form>
-
-<p><a href="/">Back to Home Page</a></p>
+</div>    
