--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.2/css/all.css">            
     
     <!-- Connect Bootstrap CSS -->            
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">            
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">  
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.3/minty/bootstrap.min.css">
     
     <!-- Connect Bootstrap JavaScript and its dependencies -->            
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>            
@@ -25,12 +26,104 @@
   </head>            
 
   <body>   
-    <%= render "shared/navbar" %>            
-    <h1>Food For No Thought</h1>
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-primary">
+      <a class="navbar-brand" href="/">
+        WTFood
+      </a>
+      
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="/">
+              <i class="fas fa-home"></i>
+              Home
+            </a>
+          </li>
+          
+          <li class="nav-item">
+            <a class="nav-link" href="/input_choices">
+              <i class="fa fa-spinner"></i>
+              Input Choices
+            </a>
+          </li>
+          
+          <li class="nav-item">
+            <a class="nav-link" href="/random">
+              <i class="fas fa-map-marker-alt"></i>
+              Random Pick
+            </a>
+          </li>
+          
+          <% if current_user != nil %>
+            <li class="nav-item">
+              <a class="nav-link" href="/users/<%= current_user.id %>">
+                <i class="fas fa-history"></i>
+                History
+              </a>
+            </li>
+          <% end %>
+        </ul>
+        
+        <ul class="navbar-nav">
+          <% if current_user == nil %>
+            <li class="nav-item">
+              <a href="/users/sign_in" class="nav-link" >
+                Sign In
+              </a>
+            </li> 
+            
+            <li class="nav-item">
+              <a href="/users/sign_up" class="nav-link" >
+                Sign Up
+              </a>
+            </li>
+          <% else %>
+            <li class="nav-item active">
+              <a class="nav-link" >
+                <%= current_user.first_name %>
+                <i class="fas fa-utensils"></i>
+              </a>
+            </li>          
+          
+            <li class="nav-item">
+              <a href="/users/edit" class="nav-link" >
+                Edit Profile
+              </a>
+            </li>
+            
+            <li class="nav-item">
+              <a href="/users/sign_out" data-method="delete" class="nav-link">
+                Sign Out
+              </a>
+            </li>
+          <% end %>  
+        </ul>
+      </div>
+    </nav>
+
+    <div class="container mt-4">
+      <% if notice.present? %>
+        <div class="alert alert-dismissable alert-success">
+          <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+          <%= notice %>
+        </div>
+      <% end %>
+
+      <% if alert.present? %>
+        <div class="alert alert-dismissable alert-warning">
+          <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+          <%= alert %>
+        </div>
+      <% end %>
+    </div> 
     
     <%= yield %>            
     
-    <%= dev_tools if Rails.env.development? %>            
+             
   </body>            
 
 </html>
